# nasti

./: .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  README.md  entry_points.txt  nasti.py  nasti.yaml  pyproject.toml  reference.yaml  setup.cfg  setup.py  sync_deps.py
.github/workflows/: ci.yml  coverage.yml  tests.yml
nasti/: cli.py  exceptions.py  globals.py  grabbers.py  hooks.py  mutation.py  nasti.py  nastifile.py  source_handlers.py  validation.py
tests/: __init__.py  mocks.py  test_globals.py  test_hooks.py  test_mutation.py  test_nastifile.py  test_source_handlers.py  test_validation.py
tests/hooks/: nasti.yaml
tests/nastifiles/bad_yaml/: nasti.yaml
tests/nastifiles/mutation_default_and_globals_complex/: nasti.yaml
tests/nastifiles/mutation_default_and_globals_simple/: example_file.txt
tests/nastifiles/mutation_default_exception/: nasti.yaml
tests/nastifiles/mutation_empty_files/: nasti.yaml
tests/nastifiles/mutation_file_doesnt_contain_replacement_text/: nasti.yaml  test.txt
tests/nastifiles/mutation_misconfigured_validation/: nasti.yaml
tests/nastifiles/mutation_no_files/: nasti.yaml
tests/nastifiles/mutation_text_replacement_fails/: test.txt
tests/nastifiles/mutation_unknown_keys/: nasti.yaml
tests/nastifiles/mutation_unmentioned_files/: nasti.yaml
tests/nastifiles/mutation_unmentioned_files/files/: unmentioned
tests/nastifiles/mutation_unmentioned_files/files/nested/: searchbutnotfind
tests/nastifiles/nastifile_default/: nasti.yaml
tests/nastifiles/nastifile_globals/: nasti.yaml
tests/nastifiles/nastifile_greeting/: nasti.yaml
tests/nastifiles/no_mutations/: nasti.yaml
tests/nastifiles/valid/: nasti.yaml
