[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NASTI"
version = "0.1.6"
authors = [
  { name="Adam Drew", email="adamrdrew@live.com" },
]
description = "NASTI's A Strange Templating Implementation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/adamrdrew/nasti"
"Bug Tracker" = "https://github.com/adamrdrew/nasti/issues"

[project.scripts]
nasti = "nasti.cli:cli"