[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "NASTI"
version = "0.2.2"
description = "NASTI's A Strange Templating Implementation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: GNU General Public License v3 (GPLv3)", "Operating System :: OS Independent",]
[[project.authors]]
name = "Adam Drew"
email = "adamrdrew@live.com"

[dependencies]
click = "==8.1.6"
coverage = "==7.2.7"
decorator = "==5.1.1"
iniconfig = "==2.0.0"
jinja2 = "==3.1.2"
markupsafe = "==2.1.3"
packaging = "==23.1"
pluggy = "==1.2.0"
pytest = "==7.4.0"
pyyaml = "==6.0.1"
validators = "==0.20.0"

[dev-dependencies]
appdirs = "==1.4.4"
attrs = "==23.1.0"
cached-property = "==1.5.2"
cerberus = "==1.3.4"
certifi = "==2023.7.22"
chardet = "==5.0.0"
charset-normalizer = "==3.2.0"
colorama = "==0.4.6"
distlib = "==0.3.7"
idna = "==3.4"
orderedmultidict = "==1.0.1"
packaging = "==23.1"
pep517 = "==0.13.0"
pip = "==23.2.1"
pip-shims = "==0.3.4"
pipenv-setup = "==3.2.0"
pipfile = "==0.0.2"
plette = "==0.4.4"
pyparsing = "==3.1.0"
python-dateutil = "==2.8.2"
requests = "==2.31.0"
requirementslib = "==1.5.7"
setuptools = "==68.0.0"
six = "==1.16.0"
toml = "==0.10.2"
tomlkit = "==0.11.8"
urllib3 = "==2.0.4"
vistir = "==0.6.1"
wheel = "==0.41.0"

[project.urls]
Homepage = "https://github.com/adamrdrew/nasti"
"Bug Tracker" = "https://github.com/adamrdrew/nasti/issues"

[project.scripts]
nasti = "nasti.cli:cli"
