[metadata]
name = NASTI
version = 0.1.3
author = Adam Drew
author_email = adamrdrew@live.com
description = NASTI is Not A Starndard Templating Implementation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adamrdrew/nasti
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.10
include_package_data = True
entry_points = file: entry_points.txt